Adds to schema, swagger, spec, adds exclude to blueprint for index.
